--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,18 @@
-php:
-  build: .
-  ports:
-   - "80:80"
-   - "443:443"
-  volumes:
-   - ./www:/var/www/html
-  links:
-   - db
-db:
-  image: mysql:5.7
-  volumes:
-   - /var/lib/mysql
-  environment:
-   - MYSQL_ROOT_PASSWORD=phprs
-   - MYSQL_DATABASE=phprs
+version: "3.9"
+services:
+  php:
+    build: .
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./www:/var/www/html
+    links:
+      - db
+  db:
+    image: mysql:5.7
+    volumes:
+      - ./db_data:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=phprs
+      - MYSQL_DATABASE=phprs
